Bug Fix - Provider logo misalignment on mobile version of provider page

--- a/themes/gv_sky/css/sass/_parts_provider/provider-box.sass
+++ b/themes/gv_sky/css/sass/_parts_provider/provider-box.sass
@@ -56,11 +56,11 @@
 
 					+m(520)
 						width: 130px
-						padding-top: 10px
+						// padding-top: 10px
 
 					+m(360)
 						width: 110px
-						padding-top: 15px
+						// padding-top: 15px
 
 			&-button
 				+button(solid, $primary, 200px, perc(47px, 230px))
